...
                        <viewControllerLayoutGuide type="bottom" id="MxR-7n-P6F"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="2sJ-bu-q0R">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="accountTF" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="accountTF" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ncF-pr-hNC">
                                <rect key="frame" x="36" y="84" width="303" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="JvU-bx-u4t"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="passwordTF" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="passwordTF" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oX8-w7-bTW">
                                <rect key="frame" x="36" y="134" width="303" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="aWb-bs-ObV"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zPJ-Dr-Y5C">
                                <rect key="frame" x="36" y="184" width="303" height="40"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="Tdj-7T-Yhu"/>
                                </constraints>
                                <state key="normal" title="login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="loginAction" destination="TWw-sQ-Scz" eventType="touchUpInside" id="Gb2-0n-MR6"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="116" y="324" width="200" height="30"/>
                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="200" id="O9i-6j-qdZ"/>
                                    <constraint firstAttribute="height" constant="30" id="pBs-fc-XUA"/>
                                </constraints>
                                <state key="normal" title="back"/>
                                <connections>
                                    <action selector="backAction:" destination="TWw-sQ-Scz" eventType="touchUpInside" id="tUl-R8-hBt"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
...
            <point key="canvasLocation" x="910" y="-818"/>
        </scene>
        <!--登录-->
        <scene sceneID="1GS-pW-NRO">
            <objects>
                <navigationController id="mD8-Bo-W1l" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="登录" id="vUT-PY-Vbn"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="7yQ-jw-eqo">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="TWw-sQ-Scz" kind="relationship" relationship="rootViewController" id="Mg6-2U-H6D"/>
...
            <point key="canvasLocation" x="964" y="699"/>
        </scene>
        <!--列表-->
        <scene sceneID="Ugv-04-PzJ">
            <objects>
                <navigationController id="byn-4V-ezV" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="列表" id="1HD-qU-ZPu"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xxt-M6-H5D">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="Cu0-zL-sY6" kind="relationship" relationship="rootViewController" id="Llg-Qt-itx"/>
...
