...
@end

@implementation ViewController

- (void)viewDidLoad {
    [super viewDidLoad];
self.navigationItem.title = @"table";
    
}
//公共方法
- (int)getNum{
    return 100;
}
...
            cell.textLabel.text = @"1-x";
        }
    }else{
        if (indexPath.row == 2){
            cell.textLabel.text = @"x-2";
        }else{
            cell.textLabel.text = @"x-x";
        }
    }
    
    
    
    
...
